# tracing-docs

./: .gitignore  ReadMe.md
cpp/: CMakeLists.txt  ReadMe.md  main.cpp
dotnet/: ReadMe.md
dotnet/Automatic/MyWebApp/: MyWebApp.csproj  Program.cs
dotnet/Automatic/MyWebApp/Properties/: launchSettings.json
dotnet/Manual/MyWebApp/: HomeController.cs  MyWebApp.csproj  Program.cs
dotnet/Manual/MyWebApp/Properties/: launchSettings.json
golang/: ReadMe.md  go.mod  go.sum  main.go  tracer.go
golang/handlers/: jokes.go  ping.go  rolldice.go
golang/tracing/: tracing.go
java/: ReadMe.md
java/otel-example/: build.gradle  settings.gradle
java/otel-example/src/main/java/com/example/otelexample/: OtelExampleApplication.java  PingRestController.java
nodejs/: ReadMe.md  auto.js  package-lock.json  package.json  tracing.js
opentelemetry-operator/: ReadMe.md
opentelemetry-operator/manifests/: ReadMe.md  instrumentation.yml  microservices-demo-non-instrumented.yml  opentelemetry-operator.yml
php/: ReadMe.md
php/instru/: auto-index.php  composer.json  index.php
phpMySQLapp/: README.md  index.php
phpMySQLapp/books/: home.php
phpMySQLapp/books/includes/: bookDatabase.php
python/: ReadMe.md  auto.py  manual.py
ruby/: ReadMe.md
ruby/dice-ruby/: Gemfile
ruby/dice-ruby/app/controllers/: dice_controller.rb
ruby/dice-ruby/config/: credentials.yml.enc
ruby/dice-ruby/config/initializers/: opentelemetry.rb
rust/: ReadMe.md
rust/basic-otlp/: Cargo.toml
rust/basic-otlp/src/: main.rs
samplers/: ReadMe.md
swift/: ReadMe.md
(+1 files in other folders)
