[package]
name = "basic-otlp"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
once_cell = "1.17"
tokio = { version = "1.0", features = ["full"] }
opentelemetry_api = { version = "*" }
opentelemetry_sdk = { version = "*", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "*", features = ["tonic", "tls-roots"] }
opentelemetry-semantic-conventions = { version = "*" }
